<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".CustomLocationActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:text="Select an existing address or add a new one. Then we will search the price around you."
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
        </TextView>

        <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#808080"/>

        <RadioGroup
                android:id="@+id/locationRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true">
            <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#808080"/>

            <LinearLayout
                    android:id="@+id/layoutForCustomLocationRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <RadioButton
                        android:id="@+id/radioBtnCustomLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/choice_custom_location"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/textView1"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/address"/>

                <EditText
                        android:id="@+id/streetAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPostalAddress">
                </EditText>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/textViewSuburb"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/suburb"/>

                <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:completionThreshold="1"
                        android:inputType="text"
                        android:id="@+id/autoCompleteSuburb"/>
            </LinearLayout>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content">
            <Button
                android:onClick="OnClickDetectByGPS"
                android:contentDescription="@string/detect_by_gps"
                android:text="Detect(GPS)"
                android:layout_width="140dp"
                android:layout_height="wrap_content"/>

            <Button
                android:onClick="OnClickDetectByWifi"
                android:contentDescription="@string/detect_by_wifi"
                android:text="Detect(WIFI)"
                android:layout_width="140dp"
                android:layout_height="wrap_content"/>
            </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/btnOK"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:onClick="OnOKClicked"
                    android:text="@string/ok"/>

            <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:onClick="OnCancelClicked"
                    android:text="@string/cancel"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>